overflow fix

--- a/css/product-card.css
+++ b/css/product-card.css
@@ -9,6 +9,8 @@
     --color-option-1: #121010;
     --color-option-3: #f3f2f2;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    overflow: hidden;
+
 }
 
 .product-card{
